fixed boxes cutting off on home

--- a/styles/generalStyle.css
+++ b/styles/generalStyle.css
@@ -87,6 +87,7 @@ body {
 }
 
 #events-go-here {
+    width: 100vw;
     display: flex;
     flex-direction: row;
     flex: 1;
