--- a/styles/home.css
+++ b/styles/home.css
@@ -12,10 +12,13 @@ content (clubs list) styling copied over from clubsListStyle.css
 */
 #clubs-go-here {
   display: flex;
+  width: 100vw;
   flex-direction: row;
   gap: 25px;
   margin: 0;
   overflow: scroll;
+  margin: -20px -20px;
+  padding: 20px 20px;
 }
 
 .clubGroup {
@@ -26,6 +29,7 @@ content (clubs list) styling copied over from clubsListStyle.css
   align-items: center;
   position: relative;
   border-radius: 1rem;
+  box-shadow: 0px 0px 8px rgb(216, 215, 215);
   overflow: hidden;
 }
 
